--- a/packages/adsum-utils/package.json
+++ b/packages/adsum-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adactive/adsum-utils",
-  "version": "2.3.0-alpha.utils.3",
+  "version": "2.4.0",
   "description": "Adsum Component utils",
   "main": "index.js",
   "author": "Stanley Ong <stanley.ong@adactive.com>",
