--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/click-events-have-key-events": 0,
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "no-unused-expressions": 0
   },
   "settings": {
     "flowtype": {
