--- a/packages/generic-node-importer/package.json
+++ b/packages/generic-node-importer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generic-node-importer",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "",
   "main": "index.js",
   "private": false,
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "co": "^4.6.0",
-    "nodemailer": "^4.1.0"
+    "nodemailer": "^4.1.0",
+    "@adactive/adsum-client-api": "^2.3.2"
   }
 }
