--- a/packages/adsum-search/package.json
+++ b/packages/adsum-search/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@adactive/arc-search",
-  "version": "2.5.3",
+  "name": "@adactiveasia/adasia-search",
+  "version": "0.0.1",
   "description": "Adsum Search Component",
   "main": "index.js",
   "author": "Stanley Ong <stanley.ong@adactive.com>",
