--- a/packages/adsum-az-scroller/package.json
+++ b/packages/adsum-az-scroller/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@adactive/az-scroller",
-  "version": "2.5.3",
+  "name": "@adactiveasia/adasia-azcroller",
+  "version": "0.0.1",
   "description": "Adsum A-Z scrolling component",
   "main": "index.js",
   "author": "Stanley Ong <andrei.pavlov@adactive.com>",
