--- a/packages/adsum-steplist/package.json
+++ b/packages/adsum-steplist/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@adactive/arc-steplist",
-  "version": "2.5.3",
+  "name": "@adactiveasia/adasia-steplist",
+  "version": "0.0.6",
   "description": "Adsum Steplist Component",
   "main": "index.js",
-  "author": "Basile Nouvellet <basile.nouvellet@ponts.org>",
+  "author": "",
   "license": "UNLISENCED",
   "readmeFilename": "README.md",
   "repository": {
