--- a/packages/adsum-loadingScreen/package.json
+++ b/packages/adsum-loadingScreen/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@adactive/arc-loading-screen",
-  "version": "2.5.3",
-  "description": "Adsum Loading Screen Component",
+  "name": "@adactiveasia/adsign-loading-screen",
+  "version": "0.0.1",
+  "description": "Adsign Loading Screen Component",
   "main": "index.js",
-  "author": "Basile Nouvellet <basile.nouvellet@ponts.org>",
+  "author": "Aditya Hadiwijaya <aditya@adactive.asia>",
   "license": "UNLISENCED",
   "readmeFilename": "README.md",
   "repository": {
@@ -21,19 +21,13 @@
   },
   "devDependencies": {
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
+    "react": "^18.2.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux": "^3.7.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "keywords": [
-    "adsum",
-    "react",
-    "redux"
-  ],
   "bin": {
     "arc-loading-screen": "./cli.js"
   }
