--- a/packages/adsum-utils/package.json
+++ b/packages/adsum-utils/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@adactive/adsum-utils",
-  "version": "2.5.3",
-  "description": "Adsum Component utils",
+  "name": "@adactiveasia/adsign-utils",
+  "version": "0.0.1",
+  "description": "Adsign Component utils",
   "main": "index.js",
-  "author": "Stanley Ong <stanley.ong@adactive.com>",
+  "author": "Aditya Hadiwijaya <aditya@adactive.asia>",
   "license": "UNLISENCED",
   "readmeFilename": "README.md",
   "repository": {
